# mocapviewer

./: CMakeLists.txt  README.md
include/: Camera.h  ShaderClass.h  Texture.h  VAO.h
include/glad/: glad.h
shaders/: default.frag  default.vert
src/: Camera.cpp  EBO.cpp  ShaderClass.cpp  Texture.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp
